<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="?attr/colorSurface"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/header_app_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/about_app"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/header_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/default_username"
        android:textColor="?attr/colorOnSurface"
        android:textAppearance="?attr/textAppearanceTitleMedium" />

    <TextView
        android:id="@+id/header_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:visibility="gone"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="?attr/textAppearanceBodySmall" />

    <TextView
        android:id="@+id/header_sync_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_offline"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <TextView
        android:id="@+id/header_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textAppearance="?attr/textAppearanceBodySmall" />
</LinearLayout>